Fixed front expandables

--- a/common/app/assets/stylesheets/module/trails/_trailblock.scss
+++ b/common/app/assets/stylesheets/module/trails/_trailblock.scss
@@ -11,6 +11,7 @@
 /* Trailblock expandables
    ========================================================================== */
 .front-section .trailblock.is-shut > ul,
+.front-section .trailblock.is-shut > .cta,
 .trailblock.is-shut .panel {
   display: none;
 }
