More style fixes

--- a/common/app/assets/stylesheets/_vars.scss
+++ b/common/app/assets/stylesheets/_vars.scss
@@ -52,6 +52,8 @@ $neutral5: #B3B3B4;
 $neutral6: #EEEEE6;
 $neutral7: #F5F4EE;
 $neutral8: #F9F9F7;
+$neutral9: #FCFCFB;
+$neutral10: #CFCFCD;
 
 /* Zones
  ========================================================================== */
