--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -24,6 +24,6 @@
         <a data-link-name="cookie" href="/info/cookies">Cookie policy</a>
     </p>
 
-    <p class="footer__copyright">© Guardian News and Media Limited or its affiliated companies. All rights reserved.</p>
+    <p class="footer__copyright">© Guardian News and Media Limited or its affiliated companies.<br/>All rights reserved.</p>
 
 </footer>
