--- a/common/app/assets/stylesheets/components/pasteup/less/base/type.less
+++ b/common/app/assets/stylesheets/components/pasteup/less/base/type.less
@@ -24,13 +24,13 @@ p, pre, dd, dl, menu, ul, ol {
 	margin: 0 0 10px;
 }
 
-.article-body p,
-.article-body li,
-.article-body dl {
+.article__body p,
+.article__body li,
+.article__body dl {
 	font-size: 14px;
 	line-height: 20px;
 }
-.article-body p {
+.article__body p {
 	margin-bottom: 15px;
 }
 
