--- a/common/app/assets/stylesheets/head.scss
+++ b/common/app/assets/stylesheets/head.scss
@@ -22,6 +22,7 @@
 @import "module/nav/_nav";
 @import "module/nav/_control";
 @import "module/_adslot";
+@import "module/headers/_page";
 @import "module/trails/_trailblock";
 @import "module/trails/_trail";
 @import "module/media";
