--- a/common/app/views/fragments/trails/featuredSmall.scala.html
+++ b/common/app/views/fragments/trails/featuredSmall.scala.html
@@ -2,13 +2,15 @@
 
 <@element class="trail trail--featured-small t@rowNum @if(trail.mainPicture(width=220)) { trail--has-image}" data-link-name="trail">
 
-    @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
+    <div class="trail__head snap-to-grid">
+        @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
 
-    <h@headingLevel class="trail__headline">
-        <a href="@trail.url" @if(related){itemprop="relatedLink"} data-link-name="@rowNum | text">
-            @RemoveOuterParaHtml(trail.headline)
-        </a>
-    </h@headingLevel>
+        <h@headingLevel class="trail__headline snap-to-grid">
+            <a href="@trail.url" @if(related){itemprop="relatedLink"} data-link-name="@rowNum | text">
+                @RemoveOuterParaHtml(trail.headline)
+            </a>
+        </h@headingLevel>
+    </div>
 
     @trail.mainPicture(width=220).map{ smallCrop =>
         <a href="@trail.url" @if(related){itemprop="relatedLink"} data-link-name="@rowNum | image">
