--- a/video/app/views/fragments/videoBody.scala.html
+++ b/video/app/views/fragments/videoBody.scala.html
@@ -1,15 +1,17 @@
 @(video: Video, storyPackage: List[Trail])(implicit request: RequestHeader)
 
-<h2 class="article-zone type-1">
-    <a class="zone-color" data-link-name="article section" href="/@video.section">@Html(video.sectionName)</a>
+<h2 class="page-head page-head--article">
+    <a data-link-name="article section" href="/@video.section">@Html(video.sectionName)</a>
 </h2>
 
 <article id="article" class="article video @if(video.isLive){is-live}" itemprop="mainContentOfPage"
          itemscope itemtype="@video.schemaType" role="main">
 
-    <header class="article-head">
-        @fragments.dateline(video.webPublicationDate, video.isLive)
-        @fragments.headline(video.headline)
+    <header class="article__head">
+        <div class="snap-to-grid">
+            @fragments.dateline(video.webPublicationDate, video.isLive)
+            @fragments.headline(video.headline)
+        </div>
     </header>
 
     <div class="player">
@@ -23,9 +25,10 @@
 
 </article>
 
-<div class="gallery-byline">
+<div class="article__byline snap-to-grid">
     @fragments.byline(video.byline, video)
 </div>
+
 <div class="box-indent video-standfirst">
     @fragments.standfirst(video)
 </div>
