Reduce space  when trailblock is shut

--- a/common/app/assets/stylesheets/module/trails/_trailblock.scss
+++ b/common/app/assets/stylesheets/module/trails/_trailblock.scss
@@ -16,6 +16,10 @@
   display: none;
 }
 
+.trailblock.is-shut {
+  padding: 0px $gutter 12px $gutter;
+}
+
 .trailblock.is-shut .count {
   display: inline-block;
 }
