When in AU mode, re-add link back to UK edition

--- a/common/app/views/fragments/sections.scala.html
+++ b/common/app/views/fragments/sections.scala.html
@@ -33,7 +33,7 @@
             }
 
             @*<!-- TODO this is temp till we have proper single domain editions -->*@
-            @if(AustraliaFrontSwitch.isSwitchedOn && page.id == ""){
+            @if(AustraliaFrontSwitch.isSwitchedOn){
                 <li class="nav__item"><a class="nav__link edition edition-au" data-link-name="switch to au edition" href="http://@site.ukHost/australia">Australia edition</a></li>
             }
         }{
