--- a/event/app/views/latest.scala.html
+++ b/event/app/views/latest.scala.html
@@ -2,17 +2,6 @@
 
 @main(page, Switches.all){ }{
 
-    <h1 class="section-head zone-color ">Latest stories</h1>
+    @fragments.latestBody(page)
 
-    @defining(page.stories){ stories =>
-        <ul class="unstyled box-indent">
-            @stories.take(10).zipWithRowInfo.map{ case (story, info) =>
-                @if(story.hasHero) {
-                    @fragments.storyThumbnailTrail(story, info)
-                } else {
-                   @fragments.storyHeadlineTrail(story, info)
-                }
-            }
-        </ul>
-    }
 }
