Fix ad slot on mobile to 60px

--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -3,7 +3,7 @@
     width: 100%;
     padding: 0;
     text-align: center;
-    min-height: 70px;
+    height: 60px;
     background-color: #f8f8f2;
     //For expandables
     position: relative;
