--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -1,18 +1,18 @@
 .i { background-repeat: no-repeat; display: inline-block; }
 
-.i-arrow-blue-down { background-position: -8px -8px; width: 15px; height: 7.319px; }
+.i-arrow-blue-down { background-position: -8px -8px; width: 15px; height: 7px; }
 
-.i-arrow-double-white { background-position: -23px -8px; width: 15px; height: 13.042px; }
+.i-arrow-double-white { background-position: -23px -8px; width: 15px; height: 13px; }
 
 .i-arrow-large-down { background-position: -38px -8px; width: 26px; height: 14px; }
 
-.i-arrow-small-down { background-position: -64px -8px; width: 12.667px; height: 7px; }
+.i-arrow-small-down { background-position: -64px -8px; width: 12px; height: 7px; }
 
-.i-arrow-small-up { background-position: -76px -8px; width: 12.667px; height: 7.083px; }
+.i-arrow-small-up { background-position: -76px -8px; width: 12px; height: 7px; }
 
-.i-arrow-white-down { background-position: -88px -8px; width: 15px; height: 7.319px; }
+.i-arrow-white-down { background-position: -88px -8px; width: 15px; height: 7px; }
 
-.i-close-x { background-position: -103px -8px; width: 14.5px; height: 14.5px; }
+.i-close-x { background-position: -103px -8px; width: 14px; height: 14px; }
 
 .i-date { background-position: -117px -8px; width: 10px; height: 10px; }
 
@@ -20,17 +20,17 @@
 
 .i-ee-add-button { background-position: -159px -8px; width: 54px; height: 47px; }
 
-.i-filter-arrow-down { background-position: -227px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-down { background-position: -227px -8px; width: 20px; height: 11px; }
 
-.i-filter-arrow-left { background-position: -247px -8px; width: 8.703px; height: 15px; }
+.i-filter-arrow-left { background-position: -247px -8px; width: 8px; height: 15px; }
 
-.i-filter-arrow-right { background-position: -255px -8px; width: 8.702px; height: 15px; }
+.i-filter-arrow-right { background-position: -255px -8px; width: 8px; height: 15px; }
 
-.i-filter-arrow-up { background-position: -263px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-up { background-position: -263px -8px; width: 20px; height: 11px; }
 
 .i-fullscreen-toggle { background-position: -283px -8px; width: 12px; height: 12px; }
 
-.i-guardian-logo { background-position: -295px -8px; width: 107.667px; height: 20.125px; }
+.i-guardian-logo { background-position: -295px -8px; width: 107px; height: 20px; }
 
 .i-image-inverted { background-position: -402px -8px; width: 12px; height: 9px; }
 
@@ -44,9 +44,11 @@
 
 .i-menu-active { background-position: -512px -8px; width: 18px; height: 12px; }
 
-.i-menu { background-position: -530px -8px; width: 18px; height: 12px; }
+.i-menu-grey { background-position: -530px -8px; width: 18px; height: 12px; }
 
-.i-more-arrow { background-position: -548px -8px; width: 10px; height: 8px; }
+.i-menu { background-position: -548px -8px; width: 18px; height: 12px; }
+
+.i-more-arrow { background-position: -566px -8px; width: 10px; height: 8px; }
 
 .i-powered-by-ee { background-position: -227px -28px; width: 68px; height: 31px; }
 
@@ -58,9 +60,9 @@
 
 .i-search { background-position: -410px -28px; width: 14px; height: 14px; }
 
-.i-sport-arrow-small { background-position: -424px -28px; width: 5.802px; height: 10px; }
+.i-sport-arrow-small { background-position: -424px -28px; width: 5px; height: 10px; }
 
-.i-sport-arrow { background-position: -429px -28px; width: 8.703px; height: 15px; }
+.i-sport-arrow { background-position: -429px -28px; width: 8px; height: 15px; }
 
 .i-story-quote { background-position: -437px -28px; width: 49px; height: 25px; }
 
