--- a/common/app/views/fragments/sections.scala.html
+++ b/common/app/views/fragments/sections.scala.html
@@ -20,7 +20,7 @@
     </ul>
 
     @if(!isFooter){
-        <div class="nav-search"></div>
+        <div class="search js-search--sections"></div>
     }
 
     <ul class="nav nav--columns nav--top-border-off nav--section-divider @if(isFooter){ nav--top-border-off nav--footer} cf">
