--- a/style-guide/app/views/styleGuide/fragments/sprites.scala.html
+++ b/style-guide/app/views/styleGuide/fragments/sprites.scala.html
@@ -20,6 +20,7 @@
 <tr><td class="type-9">.i-livequote-after</td><td class="sprite-cell"><i class="i i-livequote-after"></i></td></tr>
 <tr><td class="type-9">.i-livequote-before</td><td class="sprite-cell"><i class="i i-livequote-before"></i></td></tr>
 <tr><td class="type-9">.i-menu-active</td><td class="sprite-cell"><i class="i i-menu-active"></i></td></tr>
+<tr><td class="type-9">.i-menu-grey</td><td class="sprite-cell"><i class="i i-menu-grey"></i></td></tr>
 <tr><td class="type-9">.i-menu</td><td class="sprite-cell"><i class="i i-menu"></i></td></tr>
 <tr><td class="type-9">.i-more-arrow</td><td class="sprite-cell"><i class="i i-more-arrow"></i></td></tr>
 <tr><td class="type-9">.i-powered-by-ee</td><td class="sprite-cell"><i class="i i-powered-by-ee"></i></td></tr>
