--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -4,7 +4,7 @@
     <a data-link-name="article section" href="/@article.section">@Html(article.sectionName)</a>
 </h2>
 
-<article id="article" class="article @if(article.isLive){is-live}"
+<article id="article" class="article grid-article @if(article.isLive){is-live}"
     itemprop="mainContentOfPage" itemscope itemtype="@article.schemaType" role="main">
 
     <header class="article__head">
