--- a/common/app/assets/stylesheets/layout/_grid.scss
+++ b/common/app/assets/stylesheets/layout/_grid.scss
@@ -9,8 +9,8 @@ $baseBotPad   : 7px;
 $baseLeftPad  : 9px;
 $baseRightPad : 10px;
 
-$gridCols     : 18;
-$gridColMin   : 4; // Min mumber of grid setps for a column
+$gridCols     : 12;
+$gridColMin   : 3; // Min mumber of grid setps for a column
 
 $baseHeight   : $base/$fontsize + 0em;
 
@@ -97,5 +97,28 @@ $from: $gridWidth * $gridColMin * 2;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         height: (36px * $i) + (12px * ($i - 1));
+    }
+}
+
+.grid-article {
+    max-width: $gridWidth * 7;
+}
+
+.grid-article .main-image {
+    float: right;
+}
+
+@for $i from 7 through 12 {
+    $from : $gridWidth * $i;
+    $step : $i - 7;
+    $incrWidth  : floor($step / 2);
+    $incrMargin : ceil($step / 2);
+
+    // last media-query needs upper bound of 'infinity':
+    @media only screen and (min-width : $from) {
+        .grid-article .main-image {
+            width: $gridWidth * (4 + $incrWidth);
+            margin-right: -1 * $gridWidth * (0 + $incrMargin)
+        }
     }
 }
