--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -22,7 +22,7 @@
     <div class="after-header"></div>
 
     @if(!article.isLive  && !article.hasVideoAtTop) {
-        <div class="snap-to-grid">
+        <div class="snap-to-grid main-image-wrap">
             @article.mainPicture.map{ mainPicture =>
                 @article.mainPicture(width=220).map{ smallCrop =>
                     @fragments.img(mainPicture, smallCrop)
