Re-styled nsecond level nav

--- a/common/app/assets/stylesheets/module/_footer.scss
+++ b/common/app/assets/stylesheets/module/_footer.scss
@@ -2,7 +2,7 @@
     overflow: hidden;
     margin: 0;
     padding: 0 0 $baseline*4 0;
-    background-color: $linkBlue;
+    background-color: $main1;
 }
 
 /* Uses an id as is used as fragment
