--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -22,8 +22,9 @@
   padding-bottom: $baseline*4;
 
   @media only screen and (min-width: $tablet) {
+    background-color: $neutral8;
+    border-top: 1px solid $neutral10;
     margin: 0px;
-    border-top: none;
   }
 }
 
@@ -31,7 +32,7 @@
  ========================================================================== */
 .nav-popup--search {
   @media only screen and (min-width: $tablet) {
-    top: -56px;
+    top: -48px;
     margin-bottom: -57px;
   }
 }
@@ -48,9 +49,9 @@
     width: auto;
     padding: 0;
     min-width: 160px;
-    background-color: #ffffff;
-    border-bottom: 2px solid $darkMushroom;
-    border-left: 2px solid $darkMushroom;
+    background-color: $neutral8;
+    border-bottom: 1px solid $neutral10;
+    border-left: 1px solid $neutral10;
   }
 
   @media only screen and (min-width: $desktopAd) {
@@ -61,8 +62,8 @@
   .nav-popup--small .nav__item {
     @media only screen and (min-width: $tablet) {
       margin: 0 $gutter;
-      border-bottom: 1px solid #C3C3C3;
-      text-align: right;
+      border-bottom: 1px solid $neutral10;
+      text-align: left;
 
       &:last-child {
         border-bottom: none;
@@ -75,8 +76,10 @@
     @extend %type-7;
 
     @media only screen and (min-width: $tablet) {
-      color: #444444;
-      padding: $baseline*3 0 $baseline*3 0;
-      @include font($serifheadline, 200, 14, 14);
+      color: $neutral3;
+      padding: 0;
+      height: 36px;
+      @include font($serif, normal, 14, 36);
+      @include box-sizing(border-box);
     }
   }
