--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -18,7 +18,7 @@
 }
 
 .article__head {
-  padding: $baseline*3 $gutter $baseline*10 $gutter;
+  padding: $baseline*3 $gutter $baseline*3 $gutter;
 }
 
 .article__head .dateline {
@@ -68,6 +68,7 @@
 .article .main-image {
   @include box-sizing(border-box);
   margin-bottom: 0px;
+  padding: 0 $gutter;
 }
 
 .article__body {
