Fixed failing front integration tests

--- a/common/app/assets/stylesheets/module/trails/_trailblock.scss
+++ b/common/app/assets/stylesheets/module/trails/_trailblock.scss
@@ -10,6 +10,10 @@
 
 /* Trailblock expandables
    ========================================================================== */
+.front-section {
+  overflow: auto;
+}
+
 .front-section .trailblock.is-shut > ul,
 .front-section .trailblock.is-shut > .cta,
 .trailblock.is-shut .panel {
