--- a/football/app/views/fragments/teamlistBody.scala.html
+++ b/football/app/views/fragments/teamlistBody.scala.html
@@ -17,8 +17,8 @@
     </section>
 }
 
-<h2 class="article-zone type-1 sport-header">
-    <a class="zone-color" data-link-name="article section" href="/football">Football</a>
+<h2 class="page-head page-head--article">
+    <a data-link-name="article section" href="/football">Football</a>
 </h2>
 
 <h1 class="page-head">@pageModel.page.webTitle</h1>
