--- a/common/app/assets/stylesheets/football.scss
+++ b/common/app/assets/stylesheets/football.scss
@@ -3,7 +3,9 @@
 //Variables and mixins
 @import "_vars";
 @import "_mixins";
+@import "_extends-only";
 
+@import "module/football/_filters";
 @import "module/football/_stats";
 @import "module/football/_tables";
 @import "module/football/_matches";
