--- a/football/app/views/fragments/teamFixturesBody.scala.html
+++ b/football/app/views/fragments/teamFixturesBody.scala.html
@@ -14,7 +14,7 @@
     @fixtures.map{ fixture =>
         <h2 class="competitions-date type-4">@fixture.fixture.date.toString("EEEE d MMMM yyyy")</h2>
 
-        <a class="competition-title football-table-link zone-color type-4" href="@fixture.competition.url" data-link-name="view competition">
+        <a class="competition-title football-table-link type-4" href="@fixture.competition.url" data-link-name="view competition">
             @fixture.competition.fullName <i class="i i-sport-arrow"></i>
         </a>
         <ol class="matches unstyled">
